<resources>
    <string name="app_name">coffee2go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hot_coffees">Hot Coffees</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="remove">X</string>
    <string name="coffee2go">Coffee2Go</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_user_yet">Not a user yet?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
<<<<<<< HEAD
    <string name="action_search">Search for menu item...</string>
    <string name="search_item">Search item here...</string>
    <string name="editProfile_username">Username:</string>
    <string name="editProfile_change_picture">Change picture</string>
    <string name="editProfile_save_changes">Save changes</string>
    <string name="editProfile_usernameHint">Username</string>
    <string name="editProfile_email">Email</string>
=======
    <string name="title_activity_shops">ShopsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
>>>>>>> f681c06 (Google Maps)
</resources>